# aiwebai

./: .gitignore  AGENTS.md  FINAL_SUMMARY.md  GEMINI.md  Implenent.md  Readme.md  Readme2.md  UTF8_FIX_SUMMARY.md  complete.md  complete.md.tempncat  complete.md.tempnecho  docker-compose.yml  fix.py  fix_acc.py  fix_accounts_api.py  fix_image_model.py  fix_mcp2.py  fix_mock.py  ipr.md  print_mcp_routes.py  print_routes.py  test_chrome_import_utf8.py  test_comprehensive.py  test_db.py  test_endpoints.py  test_mcp_verification.py  test_registry.py  test_system.py  test_task.py  test_task_db.py  verify_mcp.py  verify_real_data.py
backend/: .env.example  fix.py  fix_mock.py  pyproject.toml  run_comprehensive_tests.py  test_registry.py
backend/alembic/: env.py
backend/alembic/versions/: 38ffc2ead19d_add_request_response_logging_fields.py  41d5a8eadbdf_add_password_reset_tokens_table.py  43649b8d268e_add_webhooks_table.py  584c4ec5ec61_initial_migration.py  977deef87685_add_storage_path_to_uploaded_files.py  afc97c98187f_add_capabilities_and_updated_uploaded_.py  d18c47d0758b_add_uploaded_files_table.py  e2c3c7a1b6ef_add_job_events_table.py  e6f6ccd99e25_add_email_to_accounts.py  f2bde0101af1_add_consumer_api_keys_table.py
backend/app/: __init__.py  config.py  main.py
backend/app/accounts/: manager.py
backend/app/adapters/: base.py  mcpcli_adapter.py  router.py  webapi_adapter.py
backend/app/analytics/: aggregator.py  collector.py
backend/app/api/admin/: accounts.py  analytics.py  api_keys.py  auth.py  health.py  logs.py  mcp_tokens.py  models.py  packages.py  parity.py  restart.py  users.py
backend/app/api/mcp/: server.py
backend/app/api/native/: extensions.py  gems.py  history.py  jobs.py  (+2 more)
backend/app/auth/: api_key_auth.py  dependencies.py  jwt_handler.py  password.py  rbac.py
backend/app/db/: engine.py  models.py  seed.py
backend/app/jobs/: manager.py
backend/app/logging/: structured.py
backend/app/middleware/: rate_limit.py  request_logger.py
backend/app/models/: registry.py
backend/app/schemas/: accounts.py  admin.py  native.py  openai.py
backend/app/storage/: files.py
backend/app/utils/: encryption.py  events.py  media.py  sse.py
backend/cli/: main.py
backend/gemini_unified_gateway.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_files.py  test_health.py  test_jobs.py  test_models.py  test_native_tasks.py  test_openai.py
backend/tests/unit/: test_adapters.py  test_file_storage.py  test_files.py  test_schemas.py  test_uploaded_file.py
(+93 files in other folders)
